[project]
name = "hw-16-poetry"
version = "0.1.0"
description = "QA Guru Python course project"
authors = [
    {name = "Illia Karcheuski"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "^3.13"
dependencies = [
    "selenium (==4.10.0)",
    "selene (==1.0.2)",
    "pytest (==8.4.2)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pylint (==4.0.2)"
]
